# cad-n

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  THIRD_PARTY_LICENSES.md  USER_GUIDE.md  build_notes.md  pyproject.toml  requirements-dev.txt  requirements.txt
cad_n/: __init__.py  __main__.py  config.py  logging_setup.py  main.py
cad_n/core/: __init__.py  dxf_exporter.py  dxf_importer.py  geometry_cleaner.py  job_io.py  models.py  nest_history.py  nesting_engine.py  placement.py  reports.py  units.py
cad_n/resources/sample_dxf/: 01_simple_rectangle.dxf  02_rectangle_with_hole.dxf  03_circle.dxf  04_arc_profile.dxf  05_spline_profile.dxf  06_multiple_parts.dxf  07_open_contour.dxf  08_duplicate_geometry.dxf  12_non_mm_units.dxf  (+6 more)
cad_n/ui/: __init__.py  best_nests_dialog.py  import_dialog.py  main_window.py  nest_worker.py  preview_canvas.py  settings_dialog.py
tests/: conftest.py  dxfgen.py  test_dxf_exporter.py  test_dxf_importer.py  test_geometry_cleaner.py  test_gui_smoke.py  test_nest_history.py  test_nesting_engine.py  test_regression.py  test_reports_jobio.py
tests/fixtures/: 01_simple_rectangle.dxf  02_rectangle_with_hole.dxf  03_circle.dxf  04_arc_profile.dxf  05_spline_profile.dxf  06_multiple_parts.dxf  07_open_contour.dxf  08_duplicate_geometry.dxf  09_dimensions_and_text.dxf  10_blocks_insert.dxf  11_tiny_fragments.dxf  12_non_mm_units.dxf  13_large_file.dxf  14_part_too_large.dxf  15_common_cut_rectangles.dxf
tools/: benchmark.py  fetch_real_dxf.py  make_fixtures.py  make_icon.py  make_logo.py  make_release.py  render.py  screenshot_gui.py
